kind of fixed spacing.

--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,11 @@ body {
     margin: 0;
     padding: 0;
 }
+.names {
+    margin-top: 75px;
+    font-size: 55px;
+    text-align: center;
+}
 
 body {
     padding: 0px;
@@ -22,21 +27,45 @@ div {
 .lineblack3,
 .lineblack4 {
     width: 100%;
-    margin-top: 40px;
-    height: 40px;
+    margin-top: 35px;
+    height: 35px;
     background-color: black;
 }
 
-.linegray1,
-.linegray2,
-.linegray3,
-.linegray4 {
+.linegray1 {
     position: fixed;
     width: 25%;
-    margin-top: 40px;
-    height: 40px;
+    margin-top: 35px;
+    height: 35px;
     background-color: #3a3a3a;
-    overflow: hidden;
+}
+.linegray2 {
+    position: fixed;
+    width: 25%;
+    margin-top: 105px;
+    height: 35px;
+    background-color: #3a3a3a;
+}
+.linegray3 {
+    position: fixed;
+    width: 25%;
+    margin-top: 175px;
+    height: 35px;
+    background-color: #3a3a3a;
+}
+    .linegray4 {
+    position: fixed;
+    width: 25%;
+    margin-top: 245px;
+    height: 35px;
+    background-color: #3a3a3a;
+}
+.linegray5 {
+    position: fixed;
+    width: 25%;
+    margin-top: 315px;
+    height: 35px;
+    background-color: #3a3a3a;
 }
 
 .row1,
@@ -44,6 +73,7 @@ div {
 .row3 {
     width: 100%;
     display: block;
+    font-size: 0px;
 }
 
 .tile2,
@@ -56,6 +86,7 @@ div {
     height: 350px;
     background-color: #3A3A3A;
     display: inline-block;
+    font-size: 0px;
 }
 
 .tile1,
@@ -68,4 +99,5 @@ div {
     height: 350px;
     background-color: black;
     display: inline-block;
+    font-size: 0px;
 }
